--- a/sentiment-model/training/requirements.txt
+++ b/sentiment-model/training/requirements.txt
@@ -1,29 +1,12 @@
-# Core PyTorch dependencies
-torch>=1.9.0
-torchvision>=0.10.0
-torchaudio>=0.9.0
-
-# Transformers for BERT model
-transformers>=4.12.0
-
-# Data processing and analysis
-pandas>=1.3.0
-numpy>=1.20.0
-scikit-learn>=0.24.0
-
-# Media processing
-opencv-python>=4.5.0
-ffmpeg-python>=0.2.0  # For audio extraction from videos
-
-# Visualization and logging
-matplotlib>=3.4.0
-tensorboard>=2.8.0  # For TensorBoard logging
-
-# Progress tracking and utilities
-tqdm>=4.62.0
-
-# Audio processing
-librosa>=0.8.1  # For audio feature extraction
-
-# Development tools
-pytest>=6.2.5  # For testing
+torch==2.5.1
+torchaudio==2.5.1
+torchvision==0.20.1
+transformers==4.46.3
+pandas==2.2.3
+tqdm==4.65.0
+boto3==1.35.76
+opencv-python==4.10.0.84
+sagemaker==2.237.0
+soundfile==0.12.1
+tensorboard==2.18.0
+scikit-metrics==0.1.0
