--- a/video-sentiment-frontend/package.json
+++ b/video-sentiment-frontend/package.json
@@ -22,6 +22,9 @@
   },
   "dependencies": {
     "@auth/prisma-adapter": "^2.7.2",
+    "@aws-sdk/client-s3": "^3.787.0",
+    "@aws-sdk/client-sagemaker-runtime": "^3.787.0",
+    "@aws-sdk/s3-request-presigner": "^3.787.0",
     "@hookform/resolvers": "^5.0.1",
     "@prisma/client": "^6.5.0",
     "@t3-oss/env-nextjs": "^0.12.0",
